[tool.poetry]
name = "reflex-livekit-audio-chat"
version = "0.1.0"
description = "Reflex LiveKit Audio Chat Application"
authors = ["Milo Chen"]
license = "MIT"
readme = "README.md"
packages = [{include = "reflex_livekit_audio_chat"}]

[tool.poetry.dependencies]
python = "~3.11"
reflex = "0.8.23"
livekit-agents = "*"
livekit = "*"
livekit-api = "*"
python-dotenv = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
